Add support for meme images, minor style changes

--- a/index.html
+++ b/index.html
@@ -79,14 +79,13 @@
             </form>
         </div>
         
-        <p id="form-error-message" style="color:red;visibility:hidden;">There was an error</p>
+        <p id="form-error-message" style="color:red;display:none;">There was an error</p>
         
-        <div id="result" style="visibility:hidden;">
+        <div id="result" style="display:none;">
             <h3 id="result-title"></h3>
             <br />
-            <iframe id="result-ytembed" width="560" height="315" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <img id="result-img" src="" />
-            <br />
+            <iframe id="result-ytembed" width="560" height="0" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <img id="result-img" class="center" src="" />
             <p id="result-info"></p>
             <br />
             <p><a id="result-kymlink" href=""></a></p>
