--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <option value="December">December</option>
                 </select> 
                 &emsp;
-                <input id="submitbutton" type="button" value="Submit">
+                <input id="submitbutton" type="button" value="&nbsp;Search memes&nbsp;">
             </form>
         </div>
         
