Edit error message display text & style

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </form>
         </div>
         
-        <p id="form-error-message" style="color:red;display:none;">There was an error</p>
+        <p id="form-error-message" style="display:none;">There was an error</p>
         
         <div id="result" style="display:none;">
             <h3 id="result-title"></h3>
