Add direct links, automatically fill form values

--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
             <p id="result-info"></p>
             <br />
             <p><a id="result-kymlink" href="" alt="Link to the selected meme on KnowYourMeme"></a></p>
+            <br />
+            <p><a id="result-directlink" href="" alt="Direct link to the selected meme on this page"></a></p>
         </div>
         
     </div>
