Add link to main page heading

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div id="wrapper" class="center">
     
     <div id="header">
-        <h1>Memes On This Day</h1> <h2>by <a href="https://dylanjai.de" alt="Homepage">Dylan Jaide White</a></h2><br />
+        <h1><a href="https://dylanjai.de/memes-on-this-day/" alt="Memes On This Day">Memes On This Day</a></h1> <h2>by <a href="https://dylanjai.de" alt="Main page of Dylan Jaide White's website">Dylan Jaide White</a></h2><br />
     </div>
     
     <div id="main">
