Add display of how many days have memes to 'About this site' text

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <br />
             <p>Memes On This Day is an "on this day"-style calendar, with a focus on the history of internet memes. You can use the form to look up any day of the year, and find an event from meme history which happened on that day in a past year.</p>
             <br />
-            <p>This site was made by <a href="https://dylanjai.de" alt="Dylan Jaide White's personal website">Dylan Jaide White</a> in March 2021, and is hosted using GitHub Pages. It is currently still a work-in-progress, mostly because more memes are needed to cover all days of the year. If you would like to contribute, please visit the <a href="https://github.com/dylanjaide/memes-on-this-day" alt="Memes On This Day source code (GitHub)">GitHub</a> page.</p>
+            <p>This site was made by <a href="https://dylanjai.de" alt="Dylan Jaide White's personal website">Dylan Jaide White</a> in March 2021, and is hosted using GitHub Pages. It is currently still a work-in-progress, mostly because more memes are needed to cover all days of the year. So far, we have memes for <span id="number-days-with-memes">X</span> out of 366 days - that's <span id="number-days-without-memes">Y</span> that still need to be filled in! If you would like to contribute, you can do so on the <a href="https://github.com/dylanjaide/memes-on-this-day" alt="Memes On This Day source code (GitHub)">GitHub</a> page.</p>
         </div>
     </div>
     
