--- a/index.html
+++ b/index.html
@@ -73,9 +73,13 @@
                     <option value="October">October</option>
                     <option value="November">November</option>
                     <option value="December">December</option>
-                </select> 
+                </select>
                 &emsp;
-                <input id="submitbutton" type="button" value="Search memes">
+                <input id="submitbutton" type="button" value="Search date" title="Displays a meme from the selected date (if there are any)">
+                &emsp;
+                or
+                &emsp;
+                <input id="randombutton" type="button" value="Random meme" title="Displays a randomly selected meme (from any date)">
             </form>
         </div>
         
